--- a/app/views/daily_tasks/new.html.erb
+++ b/app/views/daily_tasks/new.html.erb
@@ -1,6 +1,5 @@
-<!-- app/views/daily_tasks/new.html.erb -->
 <div class="container my-4">
-  <h5 class="mb-2"><%= @goal.title %></h5>
+  <h5 class="todo-edit-title mt-5 mb-2"><%= @goal.title %></h5>
   <div class="text-muted xsmall mb-3">
     編集日：<%= @date %> / 期間: <%= @goal.start_date || "—" %> 〜 <%= @goal.target_date || "—" %>
   </div>
