--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,5 @@
-<p>Hello <%= @resource.email %>!</p>
-
-<p>We're contacting you to notify you that your password has been changed.</p>
+<% content_for :title, "パスワード変更通知" %>
+<h1 style="margin:0 0 8px;font-size:20px;">パスワード変更通知</h1>
+<p style="margin:0 0 16px;line-height:1.7;">
+  パスワードが変更されました。心当たりがない場合は至急ご連絡ください。
+</p>
