--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -9,8 +9,8 @@
         </div>
 
         <div class="mb-3">
-          <%= f.label :content, "説明" %>
-          <%= f.text_area :content, rows: 3, class:"form-control" %>
+          <%= f.label :description, "説明" %>
+          <%= f.text_area :description, rows: 3, class:"form-control" %>
         </div>
 
         <div class="row g-2 mb-3">
