--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -87,7 +87,13 @@
   margin-bottom: 0;
 }
 
+
 @media (max-width: 767.98px) {
   .card.shadow-sm.h-100 { margin-bottom: .25rem; }
   .list-group-item { padding: .65rem .9rem; }
+}
+.full-bleed {
+  max-width: 100% !important; /* container の固定幅を解除 */
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
