--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,9 @@
-<p>Hello <%= @email %>!</p>
-
-<% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
-<% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
-<% end %>
+<% content_for :title, "メールアドレス変更通知" %>
+<h1 style="margin:0 0 8px;font-size:20px;">メールアドレス変更通知</h1>
+<p style="margin:0 0 16px;line-height:1.7;">
+  アカウントのメールアドレスが変更されました。<br>
+  新しいメール： <strong><%= @email %></strong>
+</p>
+<p style="margin:0;color:#64748b;font-size:13px;">
+  もし変更に覚えがない場合はサポートへご連絡ください。
+</p>
