--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container my-4">
-  <h5>Goals</h5>
+  <h5 class="title-large">Goals</h5>
   <ul class="list-group">
     <% @goals.each do |g| %>
       <li class="list-group-item d-flex justify-content-between">
         <span><strong><%= g.title %></strong>
-          <span class="text-muted xsmall">/ <%= g.start_date %><%= g.target_date %><%= g.description %></span></span>
+          <span class="text-muted xsmall">! <%= g.start_date %>~<%= g.target_date %>・・・・<%= g.description %></span></span>
         <%= link_to "詳細", goal_path(g, goal_id: g.id), class:"btn btn-outline-secondary btn-sm" %>
       </li>
     <% end %>
